# cmake-project-template

./: .gitmodules  CMakeLists.txt  README.md  build-and-run  justfile
.github/workflows/: cmake-multi-platform.yml
apps/: CMakeLists.txt
apps/divider/: CMakeLists.txt
apps/divider/src/: main.cpp
cmake/: CommonUtils.cmake  ExecutableTemplate.cmake  LibraryTemplate.cmake  TestTemplate.cmake
src/: CMakeLists.txt  main.cpp  main.h
src/division/: CMakeLists.txt  division.cpp  division.h
src/division/include/division/: division.h
src/division/src/: division.cpp
src/utils/: CMakeLists.txt
src/utils/include/utils/: format.h  functional.h  match.h
test/: CMakeLists.txt
test/src/: divider_tests.cpp
test/unit/: CMakeLists.txt
test/unit/division/: division_tests.cpp
